<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.zahra_1202150246_modul2.TableNumberSpinner">


    <TextView
        android:id="@+id/text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/textSize_main"
        android:text="@string/detail_customer"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_main"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/text_size"
        android:hint="@string/name" />



    <TextView
        android:id="@+id/tb_number_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_marginTop="@dimen/space"
        android:layout_below="@+id/text_name"
        android:textSize="@dimen/textSize_main"
        android:text="@string/choose_table_number" />

    <TextView
        android:id="@+id/tb_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tb_number_label"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_below="@id/tb_number_intro_text"/>

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tb_number"
            android:layout_marginLeft="@dimen/spaces"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_below="@id/tb_number_intro_text">
        </Spinner>

    <Button
        android:id="@+id/button_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/label_spinner"
        android:layout_toRightOf="@+id/label_spinner"
        android:layout_below="@id/tb_number"
        android:layout_marginTop="@dimen/space"
        android:onClick="chooseMenu"
        android:text="@string/choose_menu">

    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/title_tablelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/tablenumber_label"/>

        <TextView
            android:id="@+id/text_tablelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/nothing_entered"/>

    </LinearLayout>

</RelativeLayout>
