<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.zahra_1202150246_modul2.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/banner_fwc" />

    <TextView
        android:id="@+id/order_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_below="@id/imageView"
        android:textSize="@dimen/intro_text_size"
        android:text="@string/choose_order_method"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/order_intro_text">


        <RadioButton
            android:id="@+id/dine_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="DineIn"
            android:text="@string/dine_in" />

        <RadioButton
            android:id="@+id/take_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TakeAway"
            android:text="@string/take_away" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/choose_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaces"
            android:textSize="@dimen/text_size"
            android:text="@string/choose_your_menu" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_menu"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/choose_menu"
            android:onClick="chooseMenu"/>
    </LinearLayout>

</RelativeLayout>
